alpha10:
    - [in-progress] full printer support
    - [in-progress] editing files
    - [in-progress] game
    - updated logo (removed 16bit part)
  alpha9 [RELEASED]:
    - start of a Dirty Rat mini game
    - initial printing support
    - list and select files to read/write
    - updated sample files with ASCII Art Gallery and Notepad (for future edits)
    - removed toolbar
    - reduced tileset
    - working no-gap tiles on all text modes!
  alpha8:
    - new mascot
    - lot of bugfixes
    - updated status [s] reporting (date/battery/mouse)
    - refactored toolbar backend with secondary menus
    - code golf and optimizations
    - cpuid added with fallback for 386
    - updated logo
    - splash screen
alpha7 [RELEASED]:
    - file system bugfixes
    - ruler in file display
    - state machine implementation
    - shell and edit states
alpha6:
    - basic file system implementation:
        - read file from disk to buffer
        - display buffer
        - write buffer to the disk
    - example file on floppy
    - clean up, refactor
alpha5:
    - code refactor, cleanup, comments added
    - working icons (select, execute, description)
    - detect cursors for icons movement
    - real time loop
    - display kernel tick (live + commands history)
    - beeper support for boot tune and commands response
    - fix correct handling 40/80 screen modes
alpha4 [RELEASED]:
    - updated charset
    - two video modes: 80x25, 40x25
    - permanent header with logo and version
    - finalized stats command
alpha3 [RELEASED]:
    - hardware stats (wip)
    - better comments in kernel and boot
    - automatic list of commands in help
    - remade logo and icons
    - commands refactor for easy expansion
alpha2 [RELEASED]:
    - working kernel basics
    - colors
    - custom glyphs
    - tool: for converting png tileset to asm data
    - icons for UI in the os
    - basic shell functions: help, version
    - debug option showing all custom glyphs w/ IDs