@@ -84,9 +84,9 @@ glyph_2a:  db 0xff, 0x05, 0x50, 0x25, 0x52, 0x05, 0x50, 0xff, 0xad, 0x3d, 0x5b, 
 
 glyph_2b:  db 0xd5, 0x89, 0xd5, 0x81, 0xab, 0x91, 0xab, 0x81, 0xd5, 0x89, 0xd5, 0x81, 0xab, 0x91, 0xab, 0x81
 
-glyph_2c:  db 0xff, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0xff
+glyph_2c:  db 0x00, 0x20, 0x00, 0x20, 0xd6, 0x20, 0x00, 0x22, 0x05, 0x22, 0x00, 0x20, 0xd6, 0x20, 0x00, 0x20
 
-glyph_2d:  db 0xff, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0xff
+glyph_2d:  db 0x22, 0x01, 0xa0, 0x00, 0x8a, 0x00, 0xa0, 0x01, 0x22, 0x04, 0x28, 0x00, 0x8a, 0x00, 0x28, 0x04
 
 glyph_2e:  db 0xff, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0xff
 
@@ -94,9 +94,9 @@ glyph_2f:  db 0xff, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 
 
 glyph_30:  db 0xff, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0x81, 0xff
 
-glyph_31:  db 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x10, 0x00, 0x40, 0x04, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
+glyph_31:  db 0x00, 0x00, 0x20, 0x00, 0x00, 0x00, 0x10, 0x00, 0x40, 0x04, 0x00, 0x00, 0x20, 0x00, 0x00, 0x00
 
-glyph_32:  db 0x00, 0x00, 0x02, 0x00, 0x10, 0x00, 0x00, 0x44, 0x00, 0x00, 0x01, 0x00, 0x10, 0x00, 0x00, 0x00
+glyph_32:  db 0x00, 0x40, 0x02, 0x00, 0x10, 0x00, 0x00, 0x44, 0x00, 0x00, 0x01, 0x00, 0x10, 0x00, 0x00, 0x00
 
 glyph_33:  db 0x20, 0x08, 0x80, 0x02, 0x40, 0x14, 0x00, 0x42, 0x09, 0x20, 0x04, 0x01, 0x10, 0x00, 0x00, 0x00
 
